:add: configs firebase

--- a/.env
+++ b/.env
@@ -1,7 +1,10 @@
 PORT = 3001
 
-DB_USER = postgres
-DB_HOST = 127.0.0.1
-DB_DATABASE = postgres
-DB_PASSWORD = 771421
-DB_PORT = 5432
+APIKEY = AIzaSyAfat70q3Au3TUX293SnSxDjLaepMTL-Ig
+AUTHDOMAIN = bipix-63992.firebaseapp.com
+DATABASEURL = https://bipix-63992-default-rtdb.firebaseio.com
+PROJECTID = bipix-63992
+STORAGEBUCKET = bipix-63992.appspot.com
+MESSAGINGSENDERID = 700616056019
+APPID = 1:700616056019:web:4e3b6f89091730897d8826
+MEASUREMENTID = G-E2FN9KZQFB
