--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.0.3",
     "env": "^0.0.2",
     "express": "^4.18.2",
+    "firebase": "^9.21.0",
     "pg": "^8.10.0"
   },
   "devDependencies": {
