--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "env": "^0.0.2",
     "express": "^4.18.2",
     "firebase": "^9.21.0",
+    "firebase-admin": "^11.8.0",
     "pg": "^8.10.0"
   },
   "devDependencies": {
